namespace SistemaTutoria.Patrones.Adapter;

public interface Videoconferencia
{
    string CrearReunion(string titulo);
}